# notebook-observatory

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml
agent/: README.md  app.py  build_context.py  observatory_context.json  requirements.txt
datasets/: daily_snapshots.csv  daily_snapshots.parquet  last_run_report.json  library_adoption.csv  library_adoption.parquet
datasets/observations/date=2014-01-01/: observations.parquet
datasets/observations/date=2015-01-01/: observations.parquet
datasets/observations/date=2016-01-01/: observations.parquet
datasets/observations/date=2017-01-01/: observations.parquet
datasets/observations/date=2018-01-01/: observations.parquet
datasets/observations/date=2019-01-01/: observations.parquet
datasets/observations/date=2020-01-01/: observations.parquet
datasets/observations/date=2021-01-01/: observations.parquet
datasets/observations/date=2022-01-01/: observations.parquet
datasets/observations/date=2023-01-01/: observations.parquet
datasets/observations/date=2024-01-01/: observations.parquet
datasets/observations/date=2025-01-01/: observations.parquet
datasets/observations/date=2026-01-01/: observations.parquet
datasets/observations/date=2026-07-07/: observations.parquet
datasets/observations/date=2026-07-08/: observations.parquet
datasets/observations/date=2026-07-09/: observations.parquet
datasets/observations/date=2026-07-10/: observations.parquet
datasets/observations/date=2026-07-11/: observations.parquet
datasets/observations/date=2026-07-12/: observations.parquet
datasets/observations/date=2026-07-13/: observations.parquet
datasets/observations/date=2026-07-14/: observations.parquet
datasets/observations/date=2026-07-15/: observations.parquet
datasets/observations/date=2026-07-16/: observations.parquet
datasets/observations/date=2026-07-17/: observations.parquet
datasets/observations/date=2026-07-18/: observations.parquet
datasets/observations/date=2026-07-19/: observations.parquet
datasets/observations/date=2026-07-20/: observations.parquet
datasets/observations/date=2026-07-21/: observations.parquet
datasets/observations/date=2026-07-22/: observations.parquet
datasets/observations/date=2026-07-23/: observations.parquet
datasets/observations/date=2026-07-24/: observations.parquet
docs/: METHODOLOGY.md  METRICS.md  SCHEMA.md
site/: daily_snapshots.csv  index.html  library_adoption.csv
src/notebook_observatory/: __init__.py  cli.py  config.py  github_client.py  logging_utils.py  pipeline.py  pypi_client.py
tests/: test_dashboard.py  test_detection.py  test_metrics.py  test_parser.py  test_sampler_client.py  test_storage.py
tests/fixtures/: good.ipynb  legacy_nbformat3.ipynb  malformed.ipynb  messy.ipynb
(+20 files in other folders)
