[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-observatory"
version = "0.1.0"
description = "A continuously updated public observatory of the computational notebook ecosystem."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Notebook Observatory contributors" }]
keywords = ["jupyter", "notebooks", "observatory", "data", "census", "ecosystem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.31",
    "tenacity>=8.2",
    "pydantic>=2.5",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "duckdb>=0.10",
    "plotly>=5.18",
    "jinja2>=3.1",
    "markupsafe>=2.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-requests",
    "types-PyYAML",
]

[project.scripts]
nbobs = "notebook_observatory.cli:main"

[project.urls]
Homepage = "https://github.com/rodrigosf672/notebook-observatory"
Repository = "https://github.com/rodrigosf672/notebook-observatory"
Documentation = "https://rodrigosf672.github.io/notebook-observatory/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
notebook_observatory = ["detection/*.yaml", "dashboard/templates/*.html", "dashboard/templates/*.css"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["tests/fixtures", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]
ignore = [
    "E501",    # line length handled by formatter
    "C408",    # dict() calls are idiomatic in Plotly layout specs
    "RUF001",  # en/em dashes are intentional typography in strings
    "RUF002",  # ... and in docstrings
]

[tool.ruff.lint.isort]
known-first-party = ["notebook_observatory"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
packages = ["notebook_observatory"]
mypy_path = "src"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["duckdb.*", "plotly.*", "pandas.*", "yaml.*", "jinja2.*", "tenacity.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
